[project]
name = "find-a-grant-submissions-to-csv"
version = "0.1.0"
description = "Fetch submissions from the Find A Grant Open Data API and output as CSV."
requires-python = ">=3.8"
dependencies = [
    "httpx[http2]>=0.27.0",
    "h2>=4.1.0"
]

[tool.uv]
# No special config needed for basic sync/run
